--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.475.0",
+    "motion": "^12.5.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
